styles/globals.scss
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
@import 'mixins';

@font-face {
    font-family: 'Shnobel';
    src: url('../public/fonts/Shnobelregular.woff2') format('woff2'),
        url('../public/fonts/Shnobelregular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}


html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background-color: #CD718E;
  color: #fff;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  font-family: 'Shnobel', display;
  text-align: center;
  font-weight: 400;
}

.header {
  padding: 8px;
  position: absolute;

  &__logo {
    content: url('../public/logo.svg');
  }

  @include tablet() {
    padding: 32px;

    &__logo {
      content: url('../public/logo-desktop.svg');
    }
  }
}

.main {
  min-height: 100vh;
  padding-top: 64px;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: url(../public/clouds.svg) center/cover no-repeat;
}

